--- a/src/cl/larrainvial/carterasAFP/views/MantenedorManagerView.mxml
+++ b/src/cl/larrainvial/carterasAFP/views/MantenedorManagerView.mxml
@@ -14,8 +14,10 @@
 			
 			[Bindable] private var manager:ManagerVO;
 			[Bindable] private var model:ModelLocator = ModelLocator.getInstance(); 
+			[Bindable] public var ver:Boolean = true;
+			[Bindable] public var fn:Function;
 			
-			protected function fnBuscar():void
+			protected function fnBuscar(data:*, campo:String):void
 			{
 				// TODO Auto-generated method stub
 				var ev:ManagerEvent = new ManagerEvent(ManagerEvent.EVENT_MANAGER_LISTAR);
@@ -27,10 +29,16 @@
 			{
 				// TODO Auto-generated method stub
 				frm.manager = dg.selectedItem as ManagerVO;
-				frm.txtAnio.text = manager.anio;
-				frm.txtNombre.text = manager.nombre;
-				frm.txtDistribuidor.text = manager.distribuidor;
-				frm.txtPeriodo.text = manager.periodo;
+				frm.txtAnio.text = frm.manager.anio;
+				frm.txtNombre.text = frm.manager.nombre;
+				frm.txtDistribuidor.text = frm.manager.distribuidor;
+				frm.txtPeriodo.text = frm.manager.periodo;
+			}
+			
+			protected function fnAceptar(event:MouseEvent):void
+			{
+				// TODO Auto-generated method stub
+				fn.call(this, dg.selectedItem, 'id_manager');
 			}
 			
 			
@@ -38,12 +46,12 @@
 		]]>
 	</mx:Script>
 	<mx:VBox width="100%" height="100%" horizontalAlign="center">
-		<views:FormManager id="frm" width="100%" dg="{dg}" fnBuscar="{fnBuscar}"/>
+		<views:FormManager id="frm" width="100%" dg="{dg}" fnBuscar="{fnBuscar}" visible="{ver}" includeInLayout="{ver}"/>
 		<mx:HBox horizontalAlign="right" width="100%" paddingRight="15">
-			<mx:Button label="Buscar" click="fnBuscar()"/>	
+			<mx:Button label="Buscar" click="fnBuscar(null, null)"/>	
 		</mx:HBox>
 		<mx:HBox width="100%" horizontalAlign="right" paddingRight="15" paddingLeft="15" height="100%">
-			<mx:DataGrid id="dg" width="100%" height="100%" creationComplete="fnBuscar()" itemClick="fnSeleccionActualizacion(event)" dataProvider="{model.arrManagers}">
+			<mx:DataGrid id="dg" width="100%" height="100%" creationComplete="fnBuscar(null, null)" itemClick="fnSeleccionActualizacion(event)" dataProvider="{model.arrManagers}">
 				<mx:columns>
 					<mx:DataGridColumn dataField="nombre" headerText="Nombre"/>
 					<mx:DataGridColumn dataField="anio" headerText="Año"/>
@@ -52,7 +60,7 @@
 				</mx:columns>
 			</mx:DataGrid>	
 		</mx:HBox>
-		
+		<mx:Button label="Aceptar" enabled="{dg.selectedItem ? true : false}" click="fnAceptar(event)"  visible="{!ver}" includeInLayout="{!ver}"/>
 		
 	</mx:VBox>
 	
