--- a/src/cl/larrainvial/carterasAFP/views/MantenedorRegionView.mxml
+++ b/src/cl/larrainvial/carterasAFP/views/MantenedorRegionView.mxml
@@ -14,8 +14,10 @@
 			
 			[Bindable] private var region:RegionVO;
 			[Bindable] private var model:ModelLocator = ModelLocator.getInstance(); 
+			[Bindable] public var ver:Boolean = true;
+			[Bindable] public var fn:Function;
 			
-			protected function fnBuscar():void
+			protected function fnBuscar(data:*, campo:String):void
 			{
 				// TODO Auto-generated method stub
 				var ev:RegionEvent = new RegionEvent(RegionEvent.EVENT_REGION_LISTAR);
@@ -34,16 +36,22 @@
 			}
 			
 			
+			protected function fnAceptar(event:MouseEvent):void
+			{
+				// TODO Auto-generated method stub
+				fn.call(this, dg.selectedItem, 'id_region');
+			}
+			
 			
 		]]>
 	</mx:Script>
 	<mx:VBox width="100%" height="100%" horizontalAlign="center">
-		<views:FormRegion id="frm" width="100%" dg="{dg}" fnBuscar="{fnBuscar}"/>
+		<views:FormRegion id="frm" width="100%" dg="{dg}" fnBuscar="{fnBuscar}" visible="{ver}" includeInLayout="{ver}"/>
 		<mx:HBox horizontalAlign="right" width="100%" paddingRight="15">
-			<mx:Button label="Buscar" click="fnBuscar()"/>	
+			<mx:Button label="Buscar" click="fnBuscar(null, null)"/>	
 		</mx:HBox>
 		<mx:HBox width="100%" horizontalAlign="right" paddingRight="15" paddingLeft="15" height="100%">
-			<mx:DataGrid id="dg" width="100%" height="100%" creationComplete="fnBuscar()" itemClick="fnSeleccionActualizacion(event)" dataProvider="{model.arrRegiones}">
+			<mx:DataGrid id="dg" width="100%" height="100%" creationComplete="fnBuscar(null, null)" itemClick="fnSeleccionActualizacion(event)" dataProvider="{model.arrRegiones}">
 				<mx:columns>
 					<mx:DataGridColumn dataField="nombre" headerText="Nombre"/>
 					<mx:DataGridColumn dataField="mercado" headerText="Mercado"/>
@@ -52,7 +60,7 @@
 			</mx:DataGrid>	
 		</mx:HBox>
 		
-		
+		<mx:Button label="Aceptar" enabled="{dg.selectedItem ? true : false}" click="fnAceptar(event)"  visible="{!ver}" includeInLayout="{!ver}"/>
 	</mx:VBox>
 	
 	
