--- a/src/assets/css/ReporteVencimientoNacional.css
+++ b/src/assets/css/ReporteVencimientoNacional.css
@@ -28,6 +28,13 @@ Canvas {
    shadowDistance: 7;
    shadowDirection: right;	
 }
+
+
+FormItem
+{
+	horizontalAlign:center;
+}
+
 .mdiWindowNoFocus
 {
    borderAlpha: 1;
