--- a/src/cl/larrainvial/carterasAFP/components/RenderProcesoSubregion.mxml
+++ b/src/cl/larrainvial/carterasAFP/components/RenderProcesoSubregion.mxml
@@ -28,6 +28,10 @@
 						dato = "REGISTRAR"; 
 						editando = true;
 						correcto = false;
+					} else {
+						dato = data.subregion.nombre; 
+						editando = false;
+						correcto = true;
 					}
 					
 				}	
