--- a/src/cl/larrainvial/carterasAFP/views/ReporteComparacionCarteras.mxml
+++ b/src/cl/larrainvial/carterasAFP/views/ReporteComparacionCarteras.mxml
@@ -4,6 +4,10 @@
 	<mx:Script>
 		<![CDATA[
 			import cl.larrainvial.carterasAFP.events.ReporteEvent;
+			import cl.larrainvial.carterasAFP.model.ModelLocator;
+			[Bindable] private var model:ModelLocator = ModelLocator.getInstance();
+			
+			
 			protected function fnExcel(event:MouseEvent):void
 			{
 				// TODO Auto-generated method stub
@@ -19,8 +23,8 @@
 			
 		]]>
 	</mx:Script>
-	<mx:HBox paddingLeft="20" paddingTop="120" height="100%" horizontalGap="50" paddingBottom="50">
-		<mx:DataGrid width="926" height="100%">
+	<mx:HBox paddingLeft="20" paddingTop="120" height="100%" horizontalGap="50" paddingBottom="50" >
+		<mx:DataGrid width="926" height="100%" dataProvider="{model.arrReporteCartera}">
 			<mx:columns>			
 				<mx:DataGridColumn dataField="nemo" headerText="ISIN/Ticker"/>
 				<mx:DataGridColumn dataField="posicion_afp" headerText="Posición AFP"/>
