--- a/src/cl/larrainvial/carterasAFP/views/ReporteDiferenciaPrecios.mxml
+++ b/src/cl/larrainvial/carterasAFP/views/ReporteDiferenciaPrecios.mxml
@@ -4,6 +4,10 @@
 	<mx:Script>
 		<![CDATA[
 			import cl.larrainvial.carterasAFP.events.ReporteEvent;
+			import cl.larrainvial.carterasAFP.model.ModelLocator;
+			
+			[Bindable] private var model:ModelLocator = ModelLocator.getInstance();
+			
 			protected function fnExcel(event:MouseEvent):void
 			{
 				// TODO Auto-generated method stub
@@ -13,14 +17,14 @@
 			protected function fnBuscar(event:MouseEvent):void
 			{
 				// TODO Auto-generated method stub
-				var ev:ReporteEvent = new ReporteEvent(ReporteEvent.EVENT_REPORTE_CARTERA_LISTAR);
+				var ev:ReporteEvent = new ReporteEvent(ReporteEvent.EVENT_REPORTE_PRECIO_LISTAR);
 				ev.dispatch();
 			}
 			
 		]]>
 	</mx:Script>
 	<mx:HBox paddingLeft="20" paddingTop="120" height="100%" horizontalGap="50" paddingBottom="50">
-		<mx:DataGrid width="926" height="100%">
+		<mx:DataGrid width="926" height="100%" dataProvider="{model.arrReportePrecio}">
 			<mx:columns>			
 				<mx:DataGridColumn dataField="nemo" headerText="ISIN/Ticker"/>
 				<mx:DataGridColumn dataField="diferencia" headerText="Diferencia Precios"/>
